added bus model added seat model added stop model added route model
